--- a/electronics/basics.html
+++ b/electronics/basics.html
@@ -19,26 +19,107 @@
         </div>
         <div class="row">
             <div class="col-12 row-content">
-                <div class="h4">Relays, Solenoids & Contactors</div>
-                <strong>When would you use a contactor rather than a relay?</strong> If you're using something that needs a lot of power e.g. above 240V 5A you'd normally use a contactor. Probably should learn more before deciding that though <br>
-
-                <strong>Choosing a relay</strong>. 
-
-                <strong>Recommended Relays</strong> 4RD 931 410-05 or similar (available on aliexpress). Recommended by <a href="https://www.youtube.com/watch?v=B33nj3m3nyI">
-devin vanderhoof</a> for car stuff. Reason for recommendation - skirted, watertight, nice terminator setup 
-
+                <div class="h4" id="contents">Contents</div>
+                <div class="content-link"><a href="#relaysSolenoidsContactors">Relays, Solenoids & Contactors</a></div>
+                <div class="content-link"><a href="#relays">Relays</a></div>
+                <div class="content-link"><a href="#wiregauges">Wire Gauges</a></div>
+                <div class="content-link"><a href="#powersupplies">Power Supplies</a></div>
+                <div class="content-link"><a href="#usefulvideos">Useful Videos</a></div>
             </div>
         </div>
         <div class="row">
             <div class="col-12 row-content">
-                <div class="h4">Relays</div>
+                <div class="h4" id="relaysSolenoidsContactors">Relays, Solenoids & Contactors</div>
+                <strong>When would you use a contactor rather than a relay?</strong> If you're using something that needs a lot of power e.g. above 240V 5A you'd normally use a contactor. Probably should learn more before deciding that though <br>
+                <strong>Choosing a relay</strong>.
+                <strong>Recommended Relays</strong> 4RD 931 410-05 or similar (available on aliexpress). Recommended by <a href="https://www.youtube.com/watch?v=B33nj3m3nyI">
+                    devin vanderhoof</a> for car stuff. Reason for recommendation - skirted, watertight, nice terminator setup
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 row-content">
+                <div class="h4" id="relays">Relays</div>
                 <ul>
-                        <li>Eletromechanical Relays - use an electromagnetic coil to attract a movable contact. Often have multiple sets of contacts, so one input change can utrn on/off multiple decvices</li>
-                        <li>Solid State Relays - Can activate with very little power. Mo movable parts = longer life than electromechanical. Switch faster</li>
-                        <li>Induction Relays - </li>
-                        <li></li>
-                        <li></li>
-                    </ul>    
+                    <li>Eletromechanical Relays - use an electromagnetic coil to attract a movable contact. Often have multiple sets of contacts, so one input change can utrn on/off multiple decvices</li>
+                    <li>Solid State Relays - Can activate with very little power. Mo movable parts = longer life than electromechanical. Switch faster. Can deal with higher power than EM. Less issues with arcing</li>
+                    <li>Induction Relays - </li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 row-content">
+                <div class="h4" id="wiregauges">American Wire Gauges</div>
+                <table class="table table-bordered table-condensed">
+                    <thead>
+                        <tr>
+                            <th title="Field #1">AWG</th>
+                            <th title="Field #2">30</th>
+                            <th title="Field #3">28</th>
+                            <th title="Field #4">26</th>
+                            <th title="Field #5">24</th>
+                            <th title="Field #6">22</th>
+                            <th title="Field #7">21</th>
+                            <th title="Field #8">20</th>
+                            <th title="Field #9">19</th>
+                            <th title="Field #10">18</th>
+                            <th title="Field #11">16</th>
+                            <th title="Field #12">14</th>
+                            <th title="Field #13">12</th>
+                            <th title="Field #14">10</th>
+                            <th title="Field #15">8</th>
+                            <th title="Field #16">6</th>
+                            <th title="Field #17">4</th>
+                            <th title="Field #18">2</th>
+                            <th title="Field #19">1</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Metric(mm2 CSA)</td>
+                            <td align="right">0.05</td>
+                            <td align="right">0.08</td>
+                            <td align="right">0.14</td>
+                            <td align="right">0.25</td>
+                            <td align="right">0.34</td>
+                            <td align="right">0.38</td>
+                            <td align="right">0.5</td>
+                            <td align="right">0.75</td>
+                            <td>1</td>
+                            <td align="right">1.5</td>
+                            <td align="right">2.5</td>
+                            <td align="right">4</td>
+                            <td align="right">6</td>
+                            <td align="right">10</td>
+                            <td align="right">16</td>
+                            <td align="right">25</td>
+                            <td align="right">35</td>
+                            <td align="right">50</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="row content-section">
+            <div class="col-12 row-content">
+                <div class="h4" id="powersupplies">Power Supplies</div>
+                <div>There are 2 types of DC power supply - Linear vs Switching DC Power Supplies - What's the Difference? <a href="https://www.youtube.com/watch?v=v_HtdbsV69k">https://www.youtube.com/watch?v=v_HtdbsV69k</a></div>. Switching seems most common, but not sure which is generally used for motors.
+                <ul>
+                    <li>Switching supplies are more efficient</li>
+                    <li>Switching supplies are smaller</li>
+                    <li>Linear supplies provide a much smoother supply (less noise)</li>
+                    <li>Linear supplies have a much faster response</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 row-content">
+                <div class="h4" id="usefulvideos">Useful Videos</div>
+                <ul>
+                    <li><a href="https://www.youtube.com/watch?v=PE-_rJqvDhQ">Breadboarding Tips</a> from Ben Eater</li>
+                    <li><a href="https://www.youtube.com/watch?v=ver-Av8vr1Q">Cutting perfect jumper wires</a> from Make</li>
+                </ul>
             </div>
         </div>
     </div>
