--- a/fusion360/fusion360Basics.html
+++ b/fusion360/fusion360Basics.html
@@ -33,6 +33,15 @@
                 </ul>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-12 row-content">
+                <div class="h4">How tos</div>
+                <ul>
+                    <li><strong>Create a custom screw thread or coil</strong> - <a href="https://www.youtube.com/watch?v=IpfPoA6_OWM">Fusion 360 NewbiesPlus</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
