--- a/mechanics/bearings.html
+++ b/mechanics/bearings.html
@@ -18,7 +18,6 @@
             <div class="page-title col-12">Bearings</div>
         </div>
         <div class="row">
-
             <div class="col-12 row-content">
                 Quite a lot of information is available <a href="https://www.learnengineering.net/what-is-bearing-types-of-bearings-and-classification/">here</a>
             </div>
@@ -38,7 +37,46 @@
         </div>
         <div class="row">
             <div class="col-12 row-content">
-                <div class="h4">Pressfitting Bearings</div> 
+                <div class="h4">My Bearings</div>
+                <table class="table-striped">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>Inside Diameter (ID)</th>
+                            <th>Outside Diameter (OD)</th>
+                            <th>Thickness (B)</th>
+                        </tr>
+                    </thead>
+                    <tr>
+                        <td>small </td>
+                        <td>4mm</td>
+                        <td>12mm</td>
+                        <td>4mm</td>
+                    </tr>
+                    <tr>
+                        <td>medium</td>
+                        <td>5mm</td>
+                        <td>16mm</td>
+                        <td>5mm</td>
+                    </tr>
+                    <tr>
+                        <td>skateboard (608)</td>
+                        <td>8mm</td>
+                        <td>22mm</td>
+                        <td>7mm</td>
+                    </tr>
+                    <tr>
+                        <td>large</td>
+                        <td>15mm</td>
+                        <td>32mm</td>
+                        <td>9mm</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 row-content">
+                <div class="h4">Pressfitting Bearings</div>
                 If using heat to facilitate fitting, bear (haha) the following in mind
                 <ul>
                     <li>A heat difference of 80C should be enough to mount a bearing on a shaft</li>
