--- a/mechanics/motors.html
+++ b/mechanics/motors.html
@@ -17,20 +17,105 @@
         <div class="row">
             <div class="page-title col-12">Motors</div>
         </div>
+        
         <div class="row">
             <div class="col-12 row-content">
-                <div class="h4">Types</div>
-                <ul>
-                    <li><a href="#UNIVERSAL_MOTOR">UNIVERSAL MOTOR</a></li>
-                    <li><a href="#DC_MOTOR">DC MOTOR</a></li>
-                    <li><a href="#AC_MOTOR">AC MOTOR</a></li>
-                    <li><a href="#INDUCTION_MOTOR">INDUCTION MOTOR</a></li>
-                </ul>
+                <div class="h4" id="contents">Contents</div>  
+                <div class="content-link"><a href="#MyMotors">My Motors</a></div>
+                <div class="content-link"><a href="#steppersizes">Stepper Dimensions</a></div>
+                <div class="content-link"><a href="#Standards">Standards</a></div>
+                <div class="content-link"><a href="#UsefulConversions">Useful Conversions</a></div>
+                <div class="content-link"><a href="#LabelFields">Label Fields</a></div>
+                <div class="content-link"><a href="#STEPPER">Stepper Motors</a></div>
+                <div class="content-link"><a href="#UNIVERSAL_MOTOR">Universal Motors</a></div>
+                <div class="content-link"><a href="#DC_MOTOR">DC Motors</a></div>
+                <div class="content-link"><a href="#AC_MOTOR">AC Motors</a></div>
+                <div class="content-link"><a href="#INDUCTION_MOTOR">Inductions Motors</a></div>
+                <div class="content-link"><a href="#Identifying">Identifying Motors</a></div>
             </div>
         </div>
         <div class="row">
             <div class="col-12 row-content">
-                <div class="h4">Standards</div>
+                <div class="h4" id="MyMotors">My Motors</div>
+                <strong><a href="https://www.3dware.ch/NEMA-17-Schrittmotor-1.8-Grad,-1.68A-De.htm">Jugetek 17HS5005-20B Bipolar Stepper</a></strong>  
+                <p>Nema17 48mm Bipolar Stepper Motor<br>
+                Two phase bipolar 4 lead wire Nema17 48mm stepper motor<br>
+                Size: 42mm*42mm*L48mm<br>
+                Rated Voltage 3.36V<br>
+                Current per Phase 1.68A<br>
+                Resistance per Phase 1.65Ω +-10%<br>
+                Inductance/Phase 3.8 mH<br>
+                Holding Torque 0.44 Nm (62 oz.in)<br>
+                Rotor Inertia 82 g-cm²<br>
+                Weight 0.38 Kg</p>
+                <strong>yellow/green are one coil, red and grey another</strong>
+            </div>
+        </div>
+        <div class="row content-section">
+            <div class="col-12 col-sm-6 row-content">
+                <div class="h4" id="steppersizes">Stepper Motor Dimensions</div>
+
+                <img src="stepper-measurements.png" alt="Stepper Dimensions" class="full-width-image">
+            </div>
+            <div class="col-12 col-sm-6 row-content">
+                <table class="table table-bordered table-condensed">
+                    <thead>
+                        <tr>
+                            <td>SIZE</td>
+                            <td>A</td>
+                            <td>B</td>
+                            <td>C</td>
+                            <td>D (Dia)</td>
+                        </tr>
+                    </thead>
+                    <tr>
+                        <td>NEMA 11</td>
+                        <td>28.2</td>
+                        <td>23</td>
+                        <td>M2.5 Thread</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>NEMA 14</td>
+                        <td>35.2</td>
+                        <td>26</td>
+                        <td>M3 Thread</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>NEMA 17</td>
+                        <td>42.3</td>
+                        <td>31</td>
+                        <td>M3 Thread</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>NEMA 23</td>
+                        <td>56.4</td>
+                        <td>47.1</td>
+                        <td>5.5 Dia</td>
+                        <td>6.35</td>
+                    </tr>
+                    <tr>
+                        <td>NEMA 34</td>
+                        <td>86</td>
+                        <td>69.6</td>
+                        <td>5.5 Dia.</td>
+                        <td>14</td>
+                    </tr>
+                    <tr>
+                        <td>NEMA 42</td>
+                        <td>110</td>
+                        <td>89</td>
+                        <td>8.5</td>
+                        <td>19</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 row-content">
+                <div class="h4" id="Standards">Standards</div>
                 <ul>
                     <li><a href="#NEMA">NEMA</a> - used in north america</li>
                     <li><a href="#IEC">IEC</a> - the International Electrotechnical Commission standards are the uniform standards indicating the efficiency classes for electric motors</li>
@@ -39,7 +124,7 @@
         </div>
         <div class="row">
             <div class="col-12 row-content">
-                <div class="h4">Useful conversions</div>
+                <div class="h4" id="UsefulConversions">Useful conversions</div>
                 <ul>
                     <li>1HP is around 750W</li>
                 </ul>
@@ -47,7 +132,7 @@
         </div>
         <div class="row">
             <div class="col-12 row-content">
-                <div class="h4">Label Fields</div>
+                <div class="h4" id="LabelFields">Label Fields</div>
                 <ul>
                     <li><strong>HP</strong> - Horse power</li>
                     <li><strong>KW</strong> - Kilowatts</li>
@@ -71,7 +156,18 @@
                 </ul>
             </div>
         </div>
-        
+        <div class="row">
+            <div class="col-12 row-content">
+                <div class="h4" id="STEPPER">Stepper Motor</div>
+                Types
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+                Main features - A good interactive representation of stepper motors can be found at <a href="https://en.nanotec.com/knowledge-base/stepper-motor-animation">https://en.nanotec.com/knowledge-base/stepper-motor-animation</a>
+            </div>
+        </div>
         <div class="row">
             <div class="col-12 row-content">
                 <div class="h4" id="UNIVERSAL_MOTOR">Universal Motor</div>
@@ -162,7 +258,7 @@
         </div>
         <div class="row">
             <div class="col-12 row-content">
-                <div class="h4">Identifying a motor</div>
+                <div class="h4" id="Identifying">Identifying a motor</div>
                 Clues from the label
                 <ul>
                     <li>DCPM - DC Permanent Magnet</li>
