--- a/index.html
+++ b/index.html
@@ -47,10 +47,13 @@
                     <div class="section">
                         <h3 class="section-header">3D Printing</h3>
                         <a href="3DPrinting/basics.html">Basics</a>
+                        <a href="3DPrinting/buildTips.html">Build Tips</a>
+                        <a href="http://localhost:3002/3DPrinting/octoprint/octoprint.html">Octoprint</a>
                     </div>
                     <div class="section">
                         <h3 class="section-header">Raspberry Pi</h3>
                         <a href="raspberrypi/basics.html">Basics</a>
+                        <a href="raspberrypi/arducam-imx519.html">Arducam IMX519</a>
                     </div>
                     <div class="section">
                         <h3 class="section-header">Fusion360</h3>
@@ -64,19 +67,21 @@
                 <div class="col-12 col-sm-4">
                     <div class="section">
                         <h3 class="section-header">Practical Stuff</h3>
-                        <a href="mechanics/index.html">Mechanics</a>
+                        <a href="mechanics/bearings.html">Bearings</a>
                         <a href="electronics/basics.html">Electronics</a>
+                        <a href="mechanics/gears.html">Gears</a>
                         <a href="mechanics/motors.html">Motors</a>
+                        <a href="mechanics/motors.html">Salvaging Components</a>
                     </div>
                     <div class="section">
                         <h3 class="section-header">Wood</h3>
                         <a href="wood/potentialEcoFriendlyWoodFinishes.html"> Potential Eco Friendly Wood Finishes</a>
-                        <a href="wood/CookingForGroups.html">Cooking For Groups</a>
                     </div>
                     <div class="section">
                         <h3 class="section-header">...other</h3>
                         <a href="how-did-i-fix.html">How did i fix...</a>
-                        <a href="furniturebrands.html">Furniture Brands</a>
+                        <a href="furniturebrands.html">Second Hand Furniture Brands</a>
+                        <a href="wood/CookingForGroups.html">Cooking For Groups</a>
                     </div>
                 </div>
             </div>
