--- a/raspberrypi/basics.html
+++ b/raspberrypi/basics.html
@@ -19,7 +19,23 @@
         </div>
         <div class="row">
             <div class="col-12 row-content">
-                <div class="h4">My Hardware</div>
+                <div class="h4" id="contents">Contents</div>  
+                <div class="content-link"><a href="#MyHardware">My Hardware</a></div>
+                <div class="content-link"><a href="#OtherHardware">Other Interesting Hardware</a></div>
+                <div class="content-link"><a href="#UsefulLinks">Useful links</a></div>
+                <div class="content-link"><a href="#UsefulCommands">Useful Commands & Files</a></div>
+                <div class="content-link"><a href="#SSH">Connecting via SSH, and other useful stuff</a></div>
+                <div class="content-link"><a href="#Images">Backing up and restoring OS images to SD Card</a></div>
+                <div class="content-link"><a href="#Diagrams">Diagrams</a></div>
+                <div class="content-link"><a href="#PhysicalConnections">Physical Connections</a></div>
+                <div class="content-link"><a href="#NonPhysicalConnections">Non Physical Connections</a></div>
+                <div class="content-link"><a href="#SDCards">SD Card Recommended Specs</a></div>
+                <div class="content-link"><a href="#GPIOPins">GPIO Pins</a></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 row-content">
+                <div class="h4" id="MyHardware">My Hardware</div>
                 <ul>
                     <li>Raspberry Pi 3B V1.2</li>
                     <li>Raspberry Pi Zero W V1.1</li>
@@ -29,16 +45,16 @@
         </div>
         <div class="row">
             <div class="col-12 row-content">
-                <div class="h4">Interesting Hardware</div>
+                <div class="h4" id="OtherHardware">Other Interesting Hardware</div>
                 <ul>
                     <li>Arducam 4 to 1 camera adapter <a href="https://thepihut.com/products/multi-camera-adapter-module-v2-2-for-raspberry-pi">https://thepihut.com/products/multi-camera-adapter-module-v2-2-for-raspberry-pi. Although maybe it's just cheaper to get 4 pi zeros.</a></li>
+                    <li>GPIO Screw Terminal Hat For Raspberry Pi to allow better connections <a href="https://www.youtube.com/watch?v=G0xsN9pTVZc&t=7s">https://www.youtube.com/watch?v=G0xsN9pTVZc&t=7s</a></li>
                 </ul>
             </div>
         </div>
-        
         <div class="row">
             <div class="col-12 row-content">
-                <div class="h4">Useful links</div>
+                <div class="h4" id="UsefulLinks">Useful links</div>
                 <ul>
                     <li><a href="https://pinout.xyz/">GPIO Pin Explanation</a></li>
                     <li><a href="https://en.wikipedia.org/wiki/Raspberry_Pi_OS">Raspbian OS Version & Compatibility List</a> </li>
@@ -47,17 +63,18 @@
         </div>
         <div class="row">
             <div class="col-12 row-content">
-                <div class="h4">Useful Commands & Files</div>
+                <div class="h4" id="UsefulCommands">Useful Commands & Files</div>
                 <ul>
-                    <li>raspi-config - configure the pi from terminal window rather than GUI. Access to more advanced options</li>
-                    <li>cat /etc/os-release - see what veersion of OS you are running</li>
-                    <li>/boot/config.txt file - config options for one or more pi's the current installation can work with - see <a href="https://www.raspberrypi.com/documentation/computers/config_txt.html">here</a> for more details</li>
+                    <li><span class="copyable">raspi-config</span> - configure the pi from terminal window rather than GUI. Access to more advanced options</li>
+                    <li><span class="copyable">cat /etc/os-release</span> - see what veersion of OS you are running</li>
+                    <li><span class="copyable">vi /boot/config.txt</span> file - config options for one or more pi's the current installation can work with - see <a href="https://www.raspberrypi.com/documentation/computers/config_txt.html">official Raspberry Pi docs</a> for more details</li>
+                    <li><span class="copyable">cat /var/log/syslog</span></li>
                 </ul>
             </div>
         </div>
         <div class="row">
             <div class="col-12 row-content">
-                <div class="h4">Connecting via SSH, and other useful stuff</div>
+                <div class="h4" id="SSH">Connecting via SSH, and other useful stuff</div>
                 <ul>
                     <li><strong>SSHing</strong> - Connect to the same network as the pi. Run <code>arp -a</code> to list all the computers on the network, and identify the ip address of the pi. Connect by running <code>ssh pi@&lt;pi-ip-address&gt;</code></li>
                     <li><strong>Grabbing a file from the pi</strong> - Connect to the same network as the pi and run <code>scp pi@192.168.0.139:/home/pi/Desktop/output.jpg /Users/dave/Documents</code></li>
@@ -65,24 +82,68 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col-sm-6 row-content h4">Diagrams</div>
+            <div class="col-12 row-content">
+                <div class="h4" id="Images">Backing up and restoring OS images to SD Card </div>
+                I have something working, but chances are I'll fiddle with it until it doesn't. Here's how to backup so the fiddling is recoverable. The general process is
+                <ul>
+                    <li>create an image from the SD card</li>
+                    <li>shrink it as much as possible. Since most of the SD card is just empty fluff, shrinking it means it can be written to a smaller SD Card (assuming it fits).</li>
+                    <li>compress the file and store it somewhere</li>
+                    <li>use it later to recover</li>
+                </ul>
+                <strong>Prerequisites:</strong>
+                <ul>
+                    <li>docker installed to run pishrink</li>
+                    <li>double the capacity of the SD Card of free space free on your computer</li>
+                </ul>
+                <strong>Creating and shrinking an image from the SD card</strong> <br>
+                Use the bash script <a href="genSdImg.sh">genSdImg.sh</a> to create a shrunk image from an SD card. It will take quite a long time and there's no feedback, but you can see the size of the file growing in your destination directory
+                <br>Usage:
+                <code>bash genSdImg.sh device destination_directory destination_file_name </code>
+                <br>
+                Here's a summary of what its doing
+                <li>Unmounting the device</li>
+                <code>diskutil unmountDisk &lt;DEVICE&gt;</code>
+                <li>Creating an image from the SD Card</li>
+                <code>sudo dd if=/dev/disk2 of=&lt;DESTINATION_DIRECTORY&gt;/&lt;TEMP_FILE&gt; bs=1m</code>
+                <li>Going to the destination directory</li>
+                <code>cd &lt;DESTINATION_DIRECTORY&gt;</code>
+                <li>Using docker to run pishrink (this is because pishrink can't run directly in macOS)</li>
+                <code>docker run --privileged=true --rm --volume $(pwd):/workdir mgomesborges/pishrink pishrink -pZv &lt;DESTINATION_DIRECTORY&gt;&lt;TEMP_FILE&gt; &lt;DESTINATION_DIRECTORY&gt;&lt;DESTINATION_FILE&gt;</code></li>
+                <br>
+                <strong>Writing the image to an SD card</strong><br>
+                Use Etcher to write the image to the target SD card
+                <br>
+                <br><strong>Installing pishrink</strong> <br>
+                Run the following commands
+                <code>wget https://raw.githubusercontent.com/Drewsif/PiShrink/master/pishrink.sh
+                    chmod +x pishrink.sh
+                    sudo mv pishrink.sh /usr/local/bin</code>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-sm-6 row-content">
+                <div class="h4" id="Diagrams">Diagrams</div>
+            </div>
         </div>
         <div class="row">
             <div class="col-12 col-sm-6 row-content">
                 <figure>
-                    <img src="raspberryPi3Diagram.png" alt="Raspberry Pi 3B "  class="full-width-image">
+                    <img src="raspberryPi3Diagram.png" alt="Raspberry Pi 3B " class="full-width-image">
                     <figcaption>Raspberry Pi 3B</figcaption>
                 </figure>
             </div>
             <div class="col-12 col-sm-6 row-content">
                 <figure>
-                    <img src="raspberryPiZeroWDiagram.png" alt="Raspberry Pi Zero W"  class="full-width-image">
+                    <img src="raspberryPiZeroWDiagram.png" alt="Raspberry Pi Zero W" class="full-width-image">
                     <figcaption>Raspberry Pi Zero W</figcaption>
                 </figure>
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col-sm-6 row-content h4">Physical Connections</div>
+            <div class="col-12 col-sm-6 row-content">
+                <div class="h4" id="PhysicalConnections">Physical Connections</div>
+            </div>
         </div>
         <div class="row">
             <div class="col-12 col-sm-6 row-content">
@@ -113,7 +174,9 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col-sm-6 row-content h4">Specs & Non Physical Connections</div>
+            <div class="col-12 col-sm-6 row-content">
+                <div class="h4" id="NonPhysicalConnections">Non Physical Connections</div>
+            </div>
         </div>
         <div class="row">
             <div class="col-12 col-sm-6 row-content">
@@ -137,13 +200,25 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col-sm-6 row-content h4">GPIO Pins</div>
+            <div class="col-12 col-sm-6 row-content">
+                <div class="h4" id="SDCards">SD Card Recommended Specs</div>
+                <ul>
+                    <li>32gb - not totally necessary, but same cost as 16gb so might as well go for 32</li>
+                    <li>speed class 10</li>
+                    <li>video speed class V30, v60 or V90 (higher better)</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-sm-6 row-content">
+                <div class="h4" id="GPIOPins">GPIO Pins</div>
+            </div>
         </div>
         <div class="row">
             <div class="col-12 row-content">
-                <div>Pins for all models seem to have the same layout. There's an in depth explanation of each pin <a href="https://pinout.xyz/">here</a></div>
+                <div>Pins for all models seem to have the same layout. Pin 2 is closest to the corner of the board. There's an in depth explanation of each pin <a href="https://pinout.xyz/">here</a></div>
                 <figure>
-                    <img src="raspberryPiPins.png" alt="Raspberry Pi Pin Diagram"  class="full-width-image">
+                    <img src="raspberryPiPins.png" alt="Raspberry Pi Pin Diagram" class="full-width-image">
                 </figure>
             </div>
         </div>
@@ -152,6 +227,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="js/prism.js" type="text/javascript"></script>
+<script src="../js/prism.js" type="text/javascript"></script>
+<script src="../js/daves-clipboard-chocolate.js" type="text/javascript"></script>
 
 </html>
