added a lot of things

--- a/3DPrinting/buildTips.html
+++ b/3DPrinting/buildTips.html
@@ -25,6 +25,7 @@
                 <div class="content-link"><a href="#storingFilament">Storing Filament</a></div>
                 <div class="content-link"><a href="#ThreadedMetalInsertsfor3Dprints">Threaded Metal Inserts for 3D prints</a></div>
                 <div class="content-link"><a href="#ThreadedPlasticPartsGuide">Threaded Plastic Parts Guide</a></div>
+                <div class="content-link"><a href="#gears">Gears</a></div>
             </div>
         </div>
         <div class="row">
@@ -100,6 +101,25 @@
                     <li>For printing most things, I use "print outer before inner". Maybe this is a bad idea with threaded parts?</li>
                     <li>Should also try "print infill before walls"</li>
                 </ul>
+            </div>
+
+            <div class="row content-section">
+                <div class="col-12 row-content">
+                    <div class="h4" id="gears">Gears</div>
+                    <strong>When designing</strong>
+                    <ul>
+                        <li>Don't let the plastic get too thin around the bearing i.e. bearing diameter should probably not be much more than half gear diameter. </li>
+                        <li>Tensioners wih toothed belt drive help avoid slipping a lot</li>
+                    </ul>
+                    <strong>Printing options</strong>
+                    <ul>
+                        <li>Where elephants foot can be an issue i.e. when gear teeth will be directly on the print surface, use a raft</li>
+                    </ul>
+                    <strong>In Use</strong>
+                    <ul>
+                        <li>Lubrication - Have seen someone using carlube multipurpose silicon grease </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
