--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                         <a href="prism.html">Prism</a>
                     </div>
                     <div class="section">
+                        <h3 class="section-header">AirBnb</h3>
+                        <a href="airbnb/thebasics.html">The Basics</a>
+                    </div>
+                    <div class="section">
                         <h3 class="section-header">Cheat Sheets</h3>
                         <a href="bootstrap-cheatsheet.html">Bootstrap</a>
                         <a href="sublime-cheatsheet.html">Sublime</a>
@@ -82,6 +86,7 @@
                         <a href="how-did-i-fix.html">How did i fix...</a>
                         <a href="furniturebrands.html">Second Hand Furniture Brands</a>
                         <a href="wood/CookingForGroups.html">Cooking For Groups</a>
+                        <a href="LatexCheatsheet.html">Latex Cheatsheet</a>
                     </div>
                 </div>
             </div>
